# squareblocks

./: Cargo.toml  README.md
src/: chunk.rs  main.rs
