[package]
name = "squareblocks"
version = "0.1.0"
authors = ["wizerd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
rand = "0.8.0"
bevy_flycam = "*"
noise = "*"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1